Undo of the first stroke after entering sculpt mode for 2.8 models is lagging #71564

Closed
opened 2019-11-14 07:38:57 +01:00 by Konstantin · 36 comments

System Information
Operating system: Darwin-19.0.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-14.2.16

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-15, hash: c25a910e4e

Short description of error
I can't draw by any brush without lag if I open 2.8 files with different sculpted models. Lag is noticeable after the first undo after a brush stroke.

Lagging may be incredibly huge and sculpting in 2.8 in comparison with 2.81 is like jet. If I'm trying to sculpt from scratch something in 2.81, it seems to have no problems like these.

My models from 2.8 are high-poly so this is the reason maybe.

Exact steps for others to reproduce the error
Open high poly mesh in sculpt mode (few million polygons), make one stroke and then undo. Lag is noticeable.

[Developer note: it may only work in 2.8 specific files, still pending file from reporter]

**System Information** Operating system: Darwin-19.0.0-x86_64-i386-64bit 64 Bits Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-14.2.16 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-15, hash: `c25a910e4e` **Short description of error** I can't draw by any brush without lag if I open 2.8 files with different sculpted models. Lag is noticeable after the first undo after a brush stroke. Lagging may be incredibly huge and sculpting in 2.8 in comparison with 2.81 is like jet. If I'm trying to sculpt from scratch something in 2.81, it seems to have no problems like these. My models from 2.8 are high-poly so this is the reason maybe. **Exact steps for others to reproduce the error** Open high poly mesh in sculpt mode (few million polygons), make one stroke and then undo. Lag is noticeable. [Developer note: it may only work in 2.8 specific files, still pending file from reporter]
Author

Added subscriber: @bokoa

Added subscriber: @bokoa

Added subscriber: @Leha

Added subscriber: @Leha

Does it happen when switching brushes and brush size? This is known issue. May be fixed in today builds https://developer.blender.org/T71434

Does it happen when switching brushes and brush size? This is known issue. May be fixed in today builds https://developer.blender.org/T71434
Author

This comment was removed by @bokoa

*This comment was removed by @bokoa*
Author

In #71564#810807, @Leha wrote:
Does it happen when switching brushes and brush size? This is known issue. May be fixed in today builds https://developer.blender.org/T71434

Yeah, of course, it happens when switching brush, changing its size, strength or detail also. Forgot about it.

> In #71564#810807, @Leha wrote: > Does it happen when switching brushes and brush size? This is known issue. May be fixed in today builds https://developer.blender.org/T71434 Yeah, of course, it happens when switching brush, changing its size, strength or detail also. Forgot about it.

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Dalai Felinto self-assigned this 2019-11-14 23:47:44 +01:00

Thanks for the report, but as mentioned above, please try the latest daily build: https://builder.blender.org/download/

If the problem persists, please let us know so we can re-open the report. Don't forget to mention the specific version you tested again.
At least the changing size is supposed to be fixed already.

Thanks for the report, but as mentioned above, please try the latest daily build: https://builder.blender.org/download/ If the problem persists, please let us know so we can re-open the report. Don't forget to mention the specific version you tested again. At least the changing size is supposed to be fixed already.
Author

In #71564#811160, @dfelinto wrote:
Thanks for the report, but as mentioned above, please try the latest daily build: https://builder.blender.org/download/

If the problem persists, please let us know so we can re-open the report. Don't forget to mention the specific version you tested again.
At least the changing size is supposed to be fixed already.

Well, I was testing 2.81 Beta November 15, 00:52:41 - c25a910e4e today, and should to say the lagging is gone almost completely - I can switch brushes, change size and detail without lags, but it still appears when zoomed quite close to high-poly mesh then I'm trying to turn on dyntopo and it starts lagging quite much until I zoom out and zoom in scrolling the mouse hard. In 2.8 projects that lagged are work fine.

> In #71564#811160, @dfelinto wrote: > Thanks for the report, but as mentioned above, please try the latest daily build: https://builder.blender.org/download/ > > If the problem persists, please let us know so we can re-open the report. Don't forget to mention the specific version you tested again. > At least the changing size is supposed to be fixed already. Well, I was testing 2.81 Beta November 15, 00:52:41 - c25a910e4ec0 today, and should to say the lagging is gone almost completely - I can switch brushes, change size and detail without lags, but it still appears when zoomed quite close to high-poly mesh then I'm trying to turn on dyntopo and it starts lagging quite much until I zoom out and zoom in scrolling the mouse hard. In 2.8 projects that lagged are work fine.
Author

In #71564#811160, @dfelinto wrote:
Thanks for the report, but as mentioned above, please try the latest daily build: https://builder.blender.org/download/

If the problem persists, please let us know so we can re-open the report. Don't forget to mention the specific version you tested again.
At least the changing size is supposed to be fixed already.

Ah, just noticed that after undo operation impossible to do anything with brushes, it's super lagging.

> In #71564#811160, @dfelinto wrote: > Thanks for the report, but as mentioned above, please try the latest daily build: https://builder.blender.org/download/ > > If the problem persists, please let us know so we can re-open the report. Don't forget to mention the specific version you tested again. > At least the changing size is supposed to be fixed already. Ah, just noticed that after undo operation impossible to do anything with brushes, it's super lagging.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

By doing anything with brushes you mean, to edit them? Or to scupt?

Also not clear, if you start the sculpt from scratch in the latest Blender do you still have the problem? Or only if you start in 2.80 and bring to 2.81?

By doing anything with brushes you mean, to edit them? Or to scupt? Also not clear, if you start the sculpt from scratch in the latest Blender do you still have the problem? Or only if you start in 2.80 and bring to 2.81?

And we need a file to test things.

And another question, you do not have the problem in 2.80 right (please double-check)? Only in the latest Blender.

And we need a file to test things. And another question, you do not have the problem in 2.80 right (please double-check)? Only in the latest Blender.
Author

In #71564#811620, @dfelinto wrote:
By doing anything with brushes you mean, to edit them? Or to scupt?

Also not clear, if you start the sculpt from scratch in the latest Blender do you still have the problem? Or only if you start in 2.80 and bring to 2.81?

Very hard to size brush, draw, switch etc after undo operation, after switching from edit mode to sculpt mode. Now I will try to attach the file

> In #71564#811620, @dfelinto wrote: > By doing anything with brushes you mean, to edit them? Or to scupt? > > Also not clear, if you start the sculpt from scratch in the latest Blender do you still have the problem? Or only if you start in 2.80 and bring to 2.81? Very hard to size brush, draw, switch etc after undo operation, after switching from edit mode to sculpt mode. Now I will try to attach the file
Author

In #71564#811628, @dfelinto wrote:
And we need a file to test things.

And another question, you do not have the problem in 2.80 right (please double-check)? Only in the latest Blender.

Yes. Only in the latest Blender

> In #71564#811628, @dfelinto wrote: > And we need a file to test things. > > And another question, you do not have the problem in 2.80 right (please double-check)? Only in the latest Blender. Yes. Only in the latest Blender

I mentioned it in https://developer.blender.org/T71434 : Undo of the first stroke after entering sculpt mode is lagging
Exact steps for others to reproduce the error:
Open high poly mesh in sculpt mode (few million polygons), make one stroke and then undo. Lag is noticable

I think this bug should be renamed to "Undo of the first stroke after entering sculpt mode of high poly mesh is lagging" to not be confusing

I mentioned it in https://developer.blender.org/T71434 : Undo of the first stroke after entering sculpt mode is lagging **Exact steps for others to reproduce the error:** Open high poly mesh in sculpt mode (few million polygons), make one stroke and then undo. Lag is noticable I think this bug should be renamed to "Undo of the first stroke after entering sculpt mode of high poly mesh is lagging" to not be confusing
Author

In #71564#811620, @dfelinto wrote:
By doing anything with brushes you mean, to edit them? Or to scupt?

Also not clear, if you start the sculpt from scratch in the latest Blender do you still have the problem? Or only if you start in 2.80 and bring to 2.81?

Can't upload at the moment, but It's a human body sculpted fully in 2.8, then a litttle bit in 2.81 with dyntopo only. Project consists only of two meshes it's body and hair. It's really high-poly. I just cant find something similar that lagging like this ralative the issues with brush, switching modes, save and undo operations I mentioned, all other projects 2.8 made seems to be have no problems. In previous build I was testing yesterday all sculpts 2.8 made were really laggy.

> In #71564#811620, @dfelinto wrote: > By doing anything with brushes you mean, to edit them? Or to scupt? > > Also not clear, if you start the sculpt from scratch in the latest Blender do you still have the problem? Or only if you start in 2.80 and bring to 2.81? Can't upload at the moment, but It's a human body sculpted fully in 2.8, then a litttle bit in 2.81 with dyntopo only. Project consists only of two meshes it's body and hair. It's really high-poly. I just cant find something similar that lagging like this ralative the issues with brush, switching modes, save and undo operations I mentioned, all other projects 2.8 made seems to be have no problems. In previous build I was testing yesterday all sculpts 2.8 made were really laggy.

@Leha ok we still need a file to test, so waiting for it

@Leha ok we still need a file to test, so waiting for it

@Leha also, does it happen with files created from scratch in the latest 2.81?

@Leha also, does it happen with files created from scratch in the latest 2.81?
Dalai Felinto changed title from Laggy sculpting in 2.81 with 2.8 models to Undo of the first stroke after entering sculpt mode for 2.8 models is lagging 2019-11-15 15:08:14 +01:00
Author

In #71564#811650, @dfelinto wrote:
@Leha also, does it happen with files created from scratch in the latest 2.81?

I was trying to create something complicated from scratch with union of many meshes today to reproduce, and don't see nothing cause troubles.

> In #71564#811650, @dfelinto wrote: > @Leha also, does it happen with files created from scratch in the latest 2.81? I was trying to create something complicated from scratch with union of many meshes today to reproduce, and don't see nothing cause troubles.
Author

In #71564#811620, @dfelinto wrote:
By doing anything with brushes you mean, to edit them? Or to scupt?

Also not clear, if you start the sculpt from scratch in the latest Blender do you still have the problem? Or only if you start in 2.80 and bring to 2.81?

file with the problem is here!

sculpt_test.blend

> In #71564#811620, @dfelinto wrote: > By doing anything with brushes you mean, to edit them? Or to scupt? > > Also not clear, if you start the sculpt from scratch in the latest Blender do you still have the problem? Or only if you start in 2.80 and bring to 2.81? file with the problem is here! [sculpt_test.blend](https://archive.blender.org/developer/F8091129/sculpt_test.blend)

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro

Alright, I will test shortly. @Leha do you have the same problem? If so what is your OS / graphic card / driver?

I was trying to create something complicated from scratch with union of many meshes today to reproduce, and don't see nothing cause troubles.

@bokoa ok, so for now we assume it only happens with files from 2.80. I guess the same for 2.79? It must have been a default option that changed since. @PabloDobarro any clues?

Alright, I will test shortly. @Leha do you have the same problem? If so what is your OS / graphic card / driver? > I was trying to create something complicated from scratch with union of many meshes today to reproduce, and don't see nothing cause troubles. @bokoa ok, so for now we assume it only happens with files from 2.80. I guess the same for 2.79? It must have been a default option that changed since. @PabloDobarro any clues?

@dfelinto Yes it happens with files created from scratch in latest 2.81 builds.

Exact steps for others to reproduce the error:

  • Open Blender. Select default cube
  • Ctrl + 5 to subdivide default cube
  • Apply subdivision modifier
  • Ctrl + 4 to subdivde mesh again and get 1.5 million polygons (high poly mesh)
  • Apply subdivision modifier again
  • Switch to sulpt mode
  • Make one stroke
  • Undo

Notice lag (depends on performance of your system)

It is caused by PBVH rebuilds as mentioned in https://developer.blender.org/T71434

@dfelinto Yes it happens with files created from scratch in latest 2.81 builds. **Exact steps for others to reproduce the error:** - Open Blender. Select default cube - Ctrl + 5 to subdivide default cube - Apply subdivision modifier - Ctrl + 4 to subdivde mesh again and get 1.5 million polygons (high poly mesh) - Apply subdivision modifier again - Switch to sulpt mode - Make one stroke - Undo # Notice lag (depends on performance of your system) It is caused by PBVH rebuilds as mentioned in https://developer.blender.org/T71434
Author

In #71564#811688, @dfelinto wrote:
Alright, I will test shortly. @Leha do you have the same problem? If so what is your OS / graphic card / driver?

I was trying to create something complicated from scratch with union of many meshes today to reproduce, and don't see nothing cause troubles.

@bokoa ok, so for now we assume it only happens with files from 2.80. I guess the same for 2.79? It must have been a default option that changed since. @PabloDobarro any clues?

I see it as either only some 2.8 files or high-poly models trouble . Trying to find something from 2.79 to check..

> In #71564#811688, @dfelinto wrote: > Alright, I will test shortly. @Leha do you have the same problem? If so what is your OS / graphic card / driver? > >> I was trying to create something complicated from scratch with union of many meshes today to reproduce, and don't see nothing cause troubles. > > @bokoa ok, so for now we assume it only happens with files from 2.80. I guess the same for 2.79? It must have been a default option that changed since. @PabloDobarro any clues? I see it as either only some 2.8 files or high-poly models trouble . Trying to find something from 2.79 to check..

For the records, I cannot reproduce it here:

Operating system: Linux-5.3.0-23-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.26

For the records, I cannot reproduce it here: Operating system: Linux-5.3.0-23-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.26
Author

I've tested with 3 2.79 models, not noticed the problem

I've tested with 3 2.79 models, not noticed the problem
Author

this is a 2.79 model thats behavior exactly as I sent above my model produces

apply mirror modifier
apply subdivision modifier to 3
sculpt it
result - lagging

sculpt_test279.blend

2.8 has no such big lags with that model also, just a little bit relative to my computer performance, absolutely comfortly to work

this is a 2.79 model thats behavior exactly as I sent above my model produces apply mirror modifier apply subdivision modifier to 3 sculpt it result - lagging [sculpt_test279.blend](https://archive.blender.org/developer/F8093170/sculpt_test279.blend) 2.8 has no such big lags with that model also, just a little bit relative to my computer performance, absolutely comfortly to work

Recorded this video that shows how to reproduce lagging of undo. Lag happens only when undoing first brush stroke. This is just a default cube subdivided few times to get 6 million polygons. File size is 860 MB so I don't think it's a good idea to upload it.
In 2.80 there was no such a lag.

2019-11-16 19-23-42.mp4

Recorded this video that shows how to reproduce lagging of undo. Lag happens only when undoing first brush stroke. This is just a default cube subdivided few times to get 6 million polygons. File size is 860 MB so I don't think it's a good idea to upload it. In 2.80 there was no such a lag. [2019-11-16 19-23-42.mp4](https://archive.blender.org/developer/F8107479/2019-11-16_19-23-42.mp4)

Added subscriber: @jfmatheu

Added subscriber: @jfmatheu

Added subscriber: @ideasman42

Added subscriber: @ideasman42

While I cant redo the lag (or at least not much lag), It's reading the global undo state which would be the cause.

Checking on a fix.

While I cant redo the lag (or at least not much lag), It's reading the global undo state which would be the cause. Checking on a fix.

This issue was referenced by 1cb07530a9

This issue was referenced by 1cb07530a95615d2bec95ac76c62617838ff0a35

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Guys, I sculpted today from scratch almost same sized high-poly mesh like a human body in 2.81 and can say for sure that the reason is not just an undo stroke operation. When size reaches about 200 k verts and 200k faces it starts to lagging while making brush strokes. My project file in which I noticed the lags for first time was about 60 mb made in 2.8, but new file is 60 mb also, made in 2.81, they are very similar and both lagging in 2.81 but not in 2.8. I think this is an important information for you to fix this in future probably. Thanks!

Guys, I sculpted today from scratch almost same sized high-poly mesh like a human body in 2.81 and can say for sure that the reason is not just an undo stroke operation. When size reaches about 200 k verts and 200k faces it starts to lagging while making brush strokes. My project file in which I noticed the lags for first time was about 60 mb made in 2.8, but new file is 60 mb also, made in 2.81, they are very similar and both lagging in 2.81 but not in 2.8. I think this is an important information for you to fix this in future probably. Thanks!

@bokoa please make a new bug report with details of how to redo.

@bokoa please make a new bug report with details of how to redo.
Thomas Dinges added this to the 2.82 milestone 2023-02-08 16:41:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71564
No description provided.