Fix T71564: Undo stroke lags after entering sculpt mode

Regression since 2.80, see: T71434